--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ textarea{
 
 .jumbotron {
   text-align: center;
-  background-color: transparent;
+  background-color:transparent;
   color: black;
   border-radius: 0;
   border-bottom: 10px solid black;
@@ -57,7 +57,7 @@ textarea{
   color: white;
 }
 
-.saveBtn {
+.btn.saveBtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
