--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,12 +34,14 @@ textarea{
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;
+  text-align: center;
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+ 
 }
 
 .past {
